--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "private": true,
   "homepage": "https://doomys1234.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "-": "^0.0.1",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "g": "^2.0.1",
     "modern-normalize": "^1.1.0",
+    "netlify-cli": "^10.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-toastify": "^9.0.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.51.0",
     "shortid": "^2.2.16",
     "web-vitals": "^2.1.3"
